<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity" >

    <Button
        android:id="@+id/btnConsultarInventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:text="@string/ConsultarInventarioStr" />

    <Button
        android:id="@+id/btnColocarPedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnConsultarInventario"
        android:layout_alignRight="@+id/btnConsultarInventario"
        android:layout_below="@+id/btnConsultarInventario"
        android:text="@string/ColocarPedidosStr" />

    <Button
        android:id="@+id/btnConsultas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnColocarPedidos"
        android:layout_alignRight="@+id/btnColocarPedidos"
        android:layout_below="@+id/btnColocarPedidos"
        android:text="@string/ConsultasStr" />

</RelativeLayout>